fixing alignment

--- a/app/assets/stylesheets/product.scss
+++ b/app/assets/stylesheets/product.scss
@@ -33,7 +33,7 @@
 
 .release-date{
     padding-top: 10px;
-    font-size: 20px;
+    font-size: 15px;
 }
 
 .product-image{
@@ -44,7 +44,9 @@
 }
 
 .sneaker-name{
-    padding-top: 30px;
+    padding-top: 20%;
+    // align-self: center;
+    padding-left: 15%;
 }
 
 .product-ul{
